<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.along.longreporter.MainActivity">
    <item android:id="@+id/action_notifications"
          android:title="@string/action_notifications"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_text_size"
          android:title="@string/action_text_size"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_send_app_feedback"
          android:title="@string/action_send_app_feedback"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_user_email"
          android:title="@string/action_user_email"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_subscribe"
          android:title="@string/action_subscribe"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
